fix scrollbar

--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -11,7 +11,6 @@
     max-width: 1800px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
   }
 }
 
@@ -34,8 +33,12 @@
     width: 200px;
   }
 
+    @media (min-width: 1600px) {
+      margin-right: 350px;
+    }
+
   @media (min-width: 1920px) {
-    margin: 0 194px 24px 0;
+    margin: 0 604px 24px 0;
   }
 }
 
@@ -82,7 +85,6 @@
     padding: 0;
     margin: 0;
     width: 137px;
-    text-align: center;
     &:not(:last-child) {
       margin: 0;
     }
@@ -201,5 +203,6 @@
     width: 100%;
     max-width: 194px;
     align-items: center;
+    margin-left: auto;
   }
 }
