--- a/source/sass/block/slider.scss
+++ b/source/sass/block/slider.scss
@@ -1,6 +1,8 @@
 .slider .__container-slider {
   margin: 0 0 0 19px;
 
+
+
   @media (min-width: $tablet) {
     padding: 30px 0 0 0;
     width: 738px;
@@ -11,6 +13,12 @@
     width: 1200px;
     margin: 0 auto;
   }
+}
+
+.__container-slider {
+  ::-webkit-scrollbar {
+      width: 0;
+    }
 }
 
 .slider__slide-list {
